--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,12 @@ APP_URL=http://localhost:8000
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST=pgsql
-DB_PORT=5432
-DB_DATABASE=rrm-admin
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_PORT=3306
+DB_DATABASE=rrm_db
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
