--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,14 @@ services:
             - 9000:80
         volumes:
             - ./:/var/www/html
-    pgsql:
-        image: postgres:12.0-alpine
+    db:
+        image: mysql:5.7
         restart: always
-        container_name: rrm-admin-pgsql
-        working_dir: /data/pgsql
-        volumes:
-            - ./postgresql-data:/var/lib/postgresql/data
-        environment:
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: postgres
-            POSTGRES_DB: rrm-admin
         ports:
-            - 9001:5432
+            - "9001:3306"
+        environment:
+            MYSQL_DATABASE: "rrm_db"
+            MYSQL_ALLOW_EMPTY_PASSWORD: 1
+            MYSQL_ROOT_PASSWORD: ""
+        volumes:
+            - ./db:/var/lib/mysql
